Fixed sideNave z-index bug

--- a/components/css/nav.module.css
+++ b/components/css/nav.module.css
@@ -106,6 +106,7 @@
   left:0;
   color:#fff;
   padding:0 14px;
+  z-index: 5;
 }
 .sideNav a {
   color:#fff;
